fix(app): box-shadow on mobile + comments

--- a/src/index.css
+++ b/src/index.css
@@ -34,7 +34,7 @@
     flex-direction: column;
     border: 1px solid #e5e5e5;
     border-radius: 12px;
-    box-shadow: -4px 6px 4px 5px rgba(69, 129, 202, 0.103);
+    box-shadow: -2px 6px 4px 2px rgba(69, 129, 202, 0.103);
   }
   .info-element {
     margin-top: 20px;
@@ -43,7 +43,6 @@
     margin-top: 15px;
     display: flex;
     justify-content: space-between;
-    /* align-items: center; */
   }
 
   .heading-date-wrapper {
@@ -65,6 +64,7 @@
     width: 885px;
     height: 609px;
     padding: 38px 93px 72px 93px;
+    box-shadow: -4px 6px 4px 5px rgba(69, 129, 202, 0.103);
   }
 
   .select-currency-wrapper {
